--- a/price-monitor.nuspec
+++ b/price-monitor.nuspec
@@ -1,7 +1,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>priceMonitor</id>
-        <version>1.1.0-r</version>
+        <version>1.1.1</version>
         <authors>??????</authors>
         <owners>pk</owners>
         <licenseUrl>https://example.com</licenseUrl>
