--- a/price-monitor.nuspec
+++ b/price-monitor.nuspec
@@ -1,8 +1,8 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-        <id>priceMonitor</id>
-        <version>1.1.4</version>
-        <authors>??????</authors>
+        <id>price-monitor</id>
+        <version>$version$</version>
+        <authors>pk</authors>
         <owners>pk</owners>
         <licenseUrl>https://example.com</licenseUrl>
         <projectUrl>https://example.com</projectUrl>
