--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsdom": "^16.4.0"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.22",
     "@types/express": "^4.17.9",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
