--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "price-monitor",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
-    "start": "node ."
+    "start": "ts-node ."
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,12 @@
     "express": "^4.17.1",
     "googleapis": "^64.0.0",
     "got": "^11.8.0",
-    "jsdom": "^16.4.0"
+    "jsdom": "^16.4.0",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.1.2"
+  },
+  "devDependencies": {
+    "@types/cheerio": "^0.22.22",
+    "@types/express": "^4.17.9"
   }
 }
