Add silent run functionality

--- a/price-monitor.nuspec
+++ b/price-monitor.nuspec
@@ -10,6 +10,7 @@
         <description>priceMonitorPK</description>
     </metadata>
     <files>
-        <file src=".\**\*" target=""/>
+        <file src=".\dist\**\*" target=""/>
+        <file src=".\packages\server\node_modules\**\*" target="node_modules" exclude=".\packages\server\node_modules\@types\**\*;.\packages\server\node_modules\.bin\*" />
     </files>
 </package>
