--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,50 +7,53 @@ variables:
   - name: BuildNumber
     value: $(Build.BuildId)
   - name: PackagePath
-    value: "$(Build.ArtifactStagingDirectory)/price-monitor.$(BuildNumber).0.0.nupkg"
+    value: '$(Build.ArtifactStagingDirectory)/price-monitor.$(BuildNumber).0.0.nupkg'
 
 trigger:
   - master
 
 pool:
-  vmImage: "ubuntu-latest"
+  vmImage: 'ubuntu-latest'
 
 steps:
   - task: NodeTool@0
     inputs:
-      versionSpec: "14.x"
-    displayName: "Install Node.js"
+      versionSpec: '14.x'
+    displayName: 'Install Node.js'
 
   - script: npm install
-    displayName: "npm install"
+    displayName: 'Install dependencies'
+
+  - script: npm run build
+    displayName: 'Build app'
 
   # DEPLOYMENT STEPS
   - task: NuGetToolInstaller@0
     condition: "eq(variables['Build.SourceBranch'], 'refs/heads/master')"
     inputs:
-      versionSpec: "5.4.0"
+      versionSpec: '5.4.0'
 
   - task: NuGetCommand@2
     condition: "eq(variables['Build.SourceBranch'], 'refs/heads/master')"
-    displayName: "NuGet pack - pack the build files"
+    displayName: 'NuGet pack - pack the build files'
     inputs:
       command: pack
       name: BuildNumber
-      packagesToPack: "**/*.nuspec"
+      packagesToPack: '**/*.nuspec'
       versioningScheme: byEnvVar
       versionEnvVar: BuildNumber
       toolPackage: true
       configuration: Release
-      verbosityPack: "Detailed"
+      verbosityPack: 'Detailed'
 
   - task: NuGetCommand@2
     condition: "eq(variables['Build.SourceBranch'], 'refs/heads/master')"
-    displayName: "Publish the artifacts"
+    displayName: 'Publish the artifacts'
     inputs:
       command: push
-      packagesToPush: "$(PackagePath)"
+      packagesToPush: '$(PackagePath)'
       nuGetFeedType: internal
-      publishVstsFeed: "pkpkala"
+      publishVstsFeed: 'pkpkala'
       versioningScheme: byEnvVar
       versionEnvVar: BuildNumber
-      verbosityPush: "Detailed"
+      verbosityPush: 'Detailed'
