--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "start": "ts-node ."
+    "start": "ts-node .",
+    "build": "parcel build app.ts --target node --out-dir dist"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,8 @@
     "googleapis": "^64.0.0",
     "got": "^11.8.0",
     "jsdom": "^16.4.0",
+    "nodemon": "^2.0.6",
+    "parcel": "^1.12.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
