--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,12 +29,12 @@ steps:
 
   # DEPLOYMENT STEPS
   - task: NuGetToolInstaller@0
-    condition: "eq(variables['Build.SourceBranch'], 'refs/heads/master')"
+    # condition: "eq(variables['Build.SourceBranch'], 'refs/heads/master')"
     inputs:
       versionSpec: '5.4.0'
 
   - task: NuGetCommand@2
-    condition: "eq(variables['Build.SourceBranch'], 'refs/heads/master')"
+    # condition: "eq(variables['Build.SourceBranch'], 'refs/heads/master')"
     displayName: 'NuGet pack - pack the build files'
     inputs:
       command: pack
@@ -47,7 +47,7 @@ steps:
       verbosityPack: 'Detailed'
 
   - task: NuGetCommand@2
-    condition: "eq(variables['Build.SourceBranch'], 'refs/heads/master')"
+    # condition: "eq(variables['Build.SourceBranch'], 'refs/heads/master')"
     displayName: 'Publish the artifacts'
     inputs:
       command: push
