--- a/price-monitor.nuspec
+++ b/price-monitor.nuspec
@@ -10,6 +10,8 @@
         <description>priceMonitorPK</description>
     </metadata>
     <files>
-        <file src=".\**\*" target=""/>
+        <file src=".\dist\**\*" target=""/>
+        <file src=".\node_modules\**\*" target="node_modules" />
+        <file src=".\package.json" target=""/>
     </files>
 </package>
