--- a/package.json
+++ b/package.json
@@ -2,30 +2,42 @@
   "name": "price-monitor",
   "version": "1.0.0",
   "description": "",
-  "main": "app.ts",
+  "main": "server/index.ts",
   "scripts": {
-    "start": "node app.js",
-    "build": "parcel build app.ts --target node --out-dir dist",
-    "serve": "nodemon"
+    "build-client": "parcel build app.ts --target node --out-dir dist_web",
+    "client": "parcel watch client/index.html --out-dir dist_web",
+    "server": "nodemon",
+    "serve": "concurrently --kill-others -c \"blue.bold,magenta.bold\" \"npm:client\" \"npm:server\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/cosmos": "^3.9.3",
     "axios": "^0.21.0",
+    "axios-hooks": "^2.2.0",
     "cheerio": "^1.0.0-rc.3",
+    "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "dotenv": "^8.2.0",
-    "excel-column-name": "^1.0.1",
     "express": "^4.17.1",
     "googleapis": "^64.0.0",
     "got": "^11.8.0",
     "jsdom": "^16.4.0",
     "nodemon": "^2.0.6",
-    "parcel": "^1.12.4",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.1.2"
+    "parcel-bundler": "^1.12.4",
+    "path": "^0.12.7",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "ts-node": "^9.0.0"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.22",
-    "@types/express": "^4.17.9"
+    "@types/cron": "^1.7.2",
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.11",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "typescript": "^4.1.2"
   }
 }
