--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "target": "es6",
+    "module": "commonjs",
     "allowSyntheticDefaultImports": true,
+    "outDir": "./dist_node",
     "strict": false,
     "moduleResolution": "node",
     "noEmitOnError": true,
@@ -10,9 +12,13 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "baseUrl": ".",
+    "paths": {
+      "~*": ["*"]
+    },
     "skipLibCheck": true,
-    "outDir": "dist",
-    "lib": ["es2019", "DOM"]
+    "lib": ["es2017", "dom", "esnext"],
+    "jsx": "react"
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist_node/**/*", "dist_web/**/*"],
+  "include": ["server/**/*", "@types/**/*"]
 }
