--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,6 @@
-SPREADSHEET_ID=
-CHECK_PRICE_INTERVAL=
-FULL_CHECK_HOURS=
-CHECK_HEALTH_INTERVAL=
 SERVER_URL=
 ENV=
-VERSION=
 
-CLIENT_ID=
-CLIENT_SECRET=
-ACCESS_TOKEN=
-REFRESH_TOKEN=
-EXPIRY_DATE=
+DB_ENDPOINT=
+DB_ACCESS_KEY=
+DB_NAME=
