--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@azure/cosmos": "^3.9.3",
+    "@decorators/di": "^1.0.2",
+    "@decorators/express": "^2.4.0",
     "axios": "^0.21.0",
     "axios-hooks": "^2.2.0",
     "cheerio": "^1.0.0-rc.3",
