--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@azure/cosmos": "^3.9.3",
     "@decorators/di": "^1.0.2",
     "@decorators/express": "^2.4.0",
+    "antd": "^4.9.2",
     "axios": "^0.21.0",
     "axios-hooks": "^2.2.0",
     "cheerio": "^1.0.0-rc.3",
@@ -31,6 +32,7 @@
     "path": "^0.12.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1",
     "ts-node": "^9.0.0"
   },
   "devDependencies": {
