--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,10 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "baseUrl": ".",
-    "paths": {
-      "~*": ["*"]
-    },
     "skipLibCheck": true,
     "lib": ["es2017", "dom", "esnext"],
     "jsx": "react"
   },
   "exclude": ["node_modules", "dist_node/**/*", "dist_web/**/*"],
-  "include": ["server/**/*", "@types/**/*"]
+  "include": ["client/**/*", "server/**/*", "@types/**/*"]
 }
