--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,6 @@ steps:
 
   - script: npm install
     displayName: 'Install dependencies'
+
+  - script: npm run lint
+    displayName: 'Lint code'
