--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build-client": "parcel build app.ts --target node --out-dir dist_web",
     "client": "parcel watch client/index.html --out-dir dist_web",
     "server": "nodemon",
-    "serve": "concurrently --kill-others -c \"blue.bold,magenta.bold\" \"npm:client\" \"npm:server\""
+    "serve": "concurrently --kill-others -c \"blue.bold,magenta.bold\" \"npm:client\" \"npm:server\"",
+    "lint": "eslint --ext .ts,.tsx --ignore-path .gitignore ./"
   },
   "author": "",
   "license": "ISC",
@@ -31,7 +32,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "styled-components": "^5.2.1",
-    "ts-node": "^9.0.0"
+    "ts-node": "^9.0.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.22",
@@ -40,6 +42,14 @@
     "@types/node": "^14.14.11",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "^4.1.2"
   }
 }
