--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^2.0.6",
     "parcel-bundler": "^1.12.4",
     "path": "^0.12.7",
+    "puppeteer": "^5.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "styled-components": "^5.2.1",
@@ -40,6 +41,7 @@
     "@types/cron": "^1.7.2",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.11",
+    "@types/puppeteer": "^5.4.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
