--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,10 +13,13 @@ steps:
   - task: NodeTool@0
     inputs:
       versionSpec: '14.x'
-    displayName: 'Install Node.js'
+    displayName: Install Node.js
 
   - script: npm install
-    displayName: 'Install dependencies'
+    displayName: Install dependencies
 
   - script: npm run lint
-    displayName: 'Lint code'
+    displayName: Lint code
+
+  - script: npm run build
+    displayName: Build package
