--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: test
+name: Lint
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ on:
 jobs:
   lint:
     name: Lint code
-    runs-on: ubuntu-lateset
+    runs-on: ubuntu-latest
     env:
       PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
 
