--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@azure/cosmos": "^3.9.3",
     "@decorators/di": "^1.0.2",
     "@decorators/express": "^2.4.0",
+    "antd": "^4.9.4",
     "axios": "^0.21.0",
     "axios-hooks": "^2.2.0",
     "cheerio": "^1.0.0-rc.3",
@@ -42,6 +43,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@hot-loader/react-dom": "^17.0.1",
     "@types/cheerio": "^0.22.22",
     "@types/cron": "^1.7.2",
     "@types/express": "^4.17.9",
@@ -49,6 +51,7 @@
     "@types/puppeteer": "^5.4.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "eslint": "^7.15.0",
@@ -59,5 +62,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "react-hot-loader": "^4.13.0",
     "typescript": "^4.1.2"
+  },
+  "alias": {
+    "react-dom": "@hot-loader/react-dom"
   }
 }
