--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,6 +13,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "emitDecoratorMetadata": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react"
