--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
       "~*": ["*"]
     },
     "skipLibCheck": true,
-    "lib": ["esnext"],
+    "lib": ["ESNext"],
     "jsx": "react"
   },
   "exclude": ["node_modules", "dist_node/**/*", "dist_web/**/*"],
