--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 SERVER_URL=
 ENV=
+LOG_LEVEL=
 
 PRICE_JOB_CRON_TIME=
 HEALTH_JOB_CRON_TIME=
@@ -7,3 +8,6 @@ HEALTH_JOB_CRON_TIME=
 DB_ENDPOINT=
 DB_ACCESS_KEY=
 DB_NAME=
+
+COOKIE=
+ACCESS_TOKEN_SECRET=
