--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "@azure/cosmos": "^3.9.3",
     "@babel/runtime": "^7.12.5",
     "@decorators/di": "^1.0.2",
@@ -25,20 +26,25 @@
     "antd": "^4.9.4",
     "axios": "^0.21.0",
     "axios-hooks": "^2.2.0",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "concurrently": "^5.3.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "got": "^11.8.0",
     "jsdom": "^16.4.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.6",
     "parcel-bundler": "^1.12.4",
     "path": "^0.12.7",
     "puppeteer": "^5.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1",
     "ts-node": "^9.0.0",
     "winston": "^3.3.3"
@@ -46,13 +52,17 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@hot-loader/react-dom": "^17.0.1",
+    "@types/bcrypt": "^3.0.0",
     "@types/cheerio": "^0.22.22",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cron": "^1.7.2",
     "@types/express": "^4.17.9",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.11",
     "@types/puppeteer": "^5.4.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
