add flat monitor functionality

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,11 @@ HEALTH_JOB_CRON_TIME=
 
 DB_ENDPOINT=
 DB_ACCESS_KEY=
-DB_NAME=
+PRICE_DB_NAME=
 
 COOKIE=
 ACCESS_TOKEN_SECRET=
+
+FLAT_DB_NAME=
+FLAT_MONITOR_BASE_URL=
+FLAT_KEYWORDS=
