--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/cron": "^1.7.2",
     "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.11",
     "@types/puppeteer": "^5.4.2",
     "@types/react": "^17.0.0",
